 *   YYYY-MM-DD HH:MM UTC[-|+]hhmm Name/Username <your_email@address>
 * Use this marks for file entries:
 *   '*', '+' or '-' to mean the file was modified, added or deleted.
 * Use this marks for detail entries:
 *   '*' Changed: ...           '!' Fixed: ....
 *   '+' Added: ...             '%' Optimized: ...
 *   '-' Removed: ...           ';' Comment
 */

2020-05-29 21:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * core\include\oohg.h
     * Some format.
     * Macro HB_STORNL2 renamed to HB_STORNL.
     * Macro HB_STORPTR renamed to HB_STORPTR3.
     + Macro HB_STORPTR.
     + Macros HANDLEparam, HBITMAPparam, HBRUSHparam, HCURSORparam,
       HDCparam, HEMFparam, HFONTparam, HGDIOBJparam, HGLOBALparam,
       HICparam, HICONparam, HIMAGELISTparam, HINSTANCEparam,
       HKEYparam, HMODULEparam, HPENparam, HRGNparam, HRSRCparam
       to retrieve and cast handle parameters in functions.
       They work like HWNDparam and HMENUparam macros.
     + Macro HANDLEpush.
     + Macros HANDLEret, HBITMAPret, HBRUSHret, HCURSORret, HDCret,
       HEMFret, HFONTret, HGDIOBJret, HGLOBALret, HICret, HICONret,
       HIMAGELISTret, HINSTANCEret, HKEYret, HMENUret, HMODULEret,
       HPENret, HRGNret, HRSRCret to cast and return handles from
       functions. The work like HWNDret and HMENUret macros.
     + Macro LRESULTret.
     + Macros HANDLEstor, HBITMAPstor, HBRUSHstor, HCURSORstor,
       HDCstor, HEMFstor, HFONTstor, HGDIOBJstor, HGLOBALstor, HICstor,
       HICONstor, HIMAGELISTstor, HINSTANCEstor, HKEYstor, HMENUstor,
       HMODULEstor, HPENstor, HRGNstor, HRSRCstor, HWNDstor,
       HANDLEstor3, HBITMAPstor3, HBRUSHstor3, HCURSORstor3, HDCstor3,
       HEMFstor3, HFONTstor3, HGDIOBJstor3, HGLOBALstor3, HICstor3,
       HICONstor3, HIMAGELISTstor3, HINSTANCEstor3, HKEYstor3,
       HMENUstor3, HMODULEstor3, HPENstor3, HRGNstor3, HRSRCstor3 and
       HWNDstor3 to cast and store handles into the return stack.
     * Updated function prototypes.