@@ -12,6 +12,11 @@
  *   '-' Removed: ...           ';' Comment
  */
 
+2020-05-30 10:14 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
+   * core\source\c_active.c
+     ! Wrong order of #include breaks app building with message
+       "hb_stack not defined".
+
 2020-05-29 21:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
    * core\include\oohg.h
      * Some format.
